Closed
Bug 1364851
Opened 9 years ago
Closed 9 years ago
gfx/2d/DrawTargetSkia.cpp:1982:12: error: aggregate 'SkRegion region' has incomplete type and cannot be defined
Categories
(Core :: Graphics, defect)
Tracking
()
RESOLVED
FIXED
mozilla55
| Tracking | Status | |
|---|---|---|
| firefox-esr52 | --- | unaffected |
| firefox53 | --- | unaffected |
| firefox54 | --- | unaffected |
| firefox55 | --- | fixed |
People
(Reporter: jbeich, Assigned: jbeich)
References
Details
(Keywords: regression)
Attachments
(1 file)
OpenBSD and NetBSD still default to --disable-skia-gpu which was recently broken.
gfx/2d/DrawTargetSkia.cpp:1982:12: error: variable has incomplete type 'SkRegion'
SkRegion region;
^
gfx/skia/skia/include/core/SkCanvas.h:39:7: note: forward declaration of 'SkRegion'
class SkRegion;
^
gfx/2d/DrawTargetSkia.cpp:1984:44: error: incomplete type 'SkRegion' named in nested name
specifier
region.op(IntRectToSkIRect(aRects[i]), SkRegion::kUnion_Op);
^~~~~~~~~~
gfx/skia/skia/include/core/SkCanvas.h:39:7: note: forward declaration of 'SkRegion'
class SkRegion;
^
2 errors generated.
http://buildbot.rhaalovely.net/builders/mozilla-central-amd64/builds/2085/steps/build/logs/stdio
http://searchfox.org/mozilla-central/rev/484d2b7f51b7/toolkit/moz.configure#962
Other platforms rely on header bootlegging:
In file included from gfx/2d/DrawTargetSkia.cpp:34:
In file included from gfx/skia/skia/src/gpu/GrRenderTargetContext.h:13:
In file included from gfx/skia/skia/src/gpu/GrPaint.h:18:
gfx/skia/skia/include/core/SkRegion.h:30:2: error: test
| Comment hidden (mozreview-request) |
status-firefox53:
--- → unaffected
status-firefox54:
--- → unaffected
status-firefox55:
--- → affected
status-firefox-esr52:
--- → unaffected
Comment 3•9 years ago
|
||
| mozreview-review | ||
Comment on attachment 8867644 [details]
Bug 1364851 - Explicitly include SkRegion.h for --disable-skia-gpu.
https://reviewboard.mozilla.org/r/139238/#review142556
Attachment #8867644 -
Flags: review?(lsalzman) → review+
Keywords: checkin-needed
Pushed by ryanvm@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/9e581926e034
Explicitly include SkRegion.h for --disable-skia-gpu. r=lsalzman
Keywords: checkin-needed
Comment 5•9 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
You need to log in
before you can comment on or make changes to this bug.
Description
•