Bug 1364851 - Explicitly include SkRegion.h for --disable-skia-gpu. r=lsalzman

MozReview-Commit-ID: EEGNcLi538V